//使用proto3语法
syntax = "proto3";

//不要拆分成多个类
option java_multiple_files = false;
//生成java类所在的包
option java_package = "org.example.vcdb.proto";
//生成外层类的类名
option java_outer_classname = "DB";

import "Version.proto";

package DB;

// 对外提供的接口
service dbService {
  // getRegionMeta 方法名，google.protobuf.Empt 传入参数为空， regionMeta  返回响应类
  rpc createDB (createRequest) returns (Version.intReply) {}

  rpc deleteDB (deleteRequest) returns (Version.intReply) {}

}

message createRequest {
  string dBName=1;
}



message deleteRequest {
  string dBName=10;
  DeleteCells deleteCells=20;
}

message DeleteCells {
  bytes  cf_names=10;
  bytes terms=20;
}



